--- a/product-service.properties
+++ b/product-service.properties
@@ -1,1 +1,6 @@
 server.port=8083
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/productService
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
