--- a/product-service.properties
+++ b/product-service.properties
@@ -1,4 +1,4 @@
-
+server.port=8083
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/productService
 spring.datasource.username=postgres
