--- a/journalisation-service.properties
+++ b/journalisation-service.properties
@@ -1,1 +1,6 @@
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/journalisation-service
 
